----------------------------------------------------------------------
Sep 14, 2014 - Clojure 1.3 - 1.6, sheet v17

Added some functions previously not in cheatsheet:

    extends? - Now in Protocols/Test
    extend extend-protocol extenders - New section Protocols/Other
    class? bases supers type - Now in Java Interoperation/General

Also some Java String methods:

    .startsWith .endsWith .contains - Now in Strings/Test

Add link to Java API for BigInteger in Numbers/Bitwise section, since
Clojure bitwise functions only work on Longs and smaller.

Update Java API links to Java 7.  Java API links were to Java 6 docs
in earlier cheatsheet versions.

----------------------------------------------------------------------
Aug 29, 2014 - Clojure 1.3 - 1.6, sheet v16

Reorganized some operations on sets, maps, and relations.

Moved Rel algebra operations out of Set and into its own section
Relations, after Maps.

Added Sets/Set Ops section in place of Sets/Rel algebra.  It includes
only those operations that are for sets, but not specifically for
relations (e.g. union, intersection).  Added see also to Relations
section.

Removed section Sets/Get map and moved the operations that were there
to more appropriate places:

    clojure.set/map-invert - Now in Maps/'Change'
    clojure.set/rename-keys - Now in Maps/'Change'
    clojure.set/index - Now in Maps/Create and Relations/Rel algebra
    clojure.set/rename - Now in Relations/Rel algebra

Added link to Medley library in Maps/'Change' section.  I know that
Medley is not limited to functions in that category, but it definitely
contains several useful functions in that category, e.g. map-keys,
map-vals, filter-keys, filter-vals.

----------------------------------------------------------------------
Jul 13, 2014 - Clojure 1.3 - 1.6, sheet v15

Expanded out the abbreviated common prefixes/suffixes.  This makes it
possible to search for all of those vars by their normal names, at the