@@ -1,4 +1,10 @@
 ----------------------------------------------------------------------
+Nov 25, 2014 - Clojure 1.3 - 1.6, sheet v18
+
+Added many links to "Reader Macros" section, including to specific
+anchor points within http://clojure.org/reader that are now available.
+
+----------------------------------------------------------------------
 Sep 14, 2014 - Clojure 1.3 - 1.6, sheet v17
 
 Added some functions previously not in cheatsheet:
